# repoql

./: README.md  pyproject.toml
repoql/: __init__.py  recipes.py
repoql/blob_relation/: __init__.py  constructors.py  models.py
repoql/fp/: __init__.py  compose.py  pipe.py
repoql/hooks/: __init__.py  pinned_iterable.py  repository.py
repoql/query/: __init__.py  curried.py  engine.py  protocols.py  typings.py
repoql/utils/: git.py
typings/: pygit2.pyi
